--- a/02_Lancamento_Estragico/style.css
+++ b/02_Lancamento_Estragico/style.css
@@ -5,6 +5,7 @@
     border: 0;
     box-sizing: border-box;
     font-size: 100%;
+    /* formulario */
     resize: none;
 }
 
@@ -17,19 +18,15 @@
 }
 
 .alinhamento {
-    width: 1620px;
+    width: 1440px;
     margin: 0 auto;
 
-}
-
-main {
-    background-color: var(--branco_pastel);
 }
 
 /* Cabeçalho */
 
 header {
-    background-color: #669966;
+    background-color: var(--verde);
     padding-bottom: 20px;
     padding-top: 20px;
 }
@@ -58,7 +55,7 @@ nav {
     color: #FFFFFF;
     text-decoration: none;
     font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font_mont);
     font-weight: 800;
 }
 
@@ -70,6 +67,10 @@ nav {
 
 
 /* Seção Quem somos */
+
+main {
+    background-color: var(--branco_pastel);
+}
 
 h1 {
     /* visibility: hidden; */
@@ -120,6 +121,7 @@ h1 {
     width: 250px;
     height: 60px;
     font-size: 25px;
+    box-shadow: 5px 5px 40px 5px rgba(0, 0, 0, 0.4);
 }
 
 .btn_esg a{
@@ -158,6 +160,7 @@ h1 {
 .imgs>* {
     width: 475px;
     border-radius: 50px;
+    box-shadow: 10px 10px 40px 10px rgba(0, 0, 0, 0.4);
 }
 
 /* ESG */
@@ -194,12 +197,11 @@ h1 {
     border-radius: 71px;
 }
 
-/* Formualrio */
+/* Formulario */
 
 .formulario {
     background-color: var(--verde);
-    padding-bottom: 100px;
-    padding-top: 100px;
+    padding: 100px 0;
 }
 
 .formulario_titulo {
@@ -221,10 +223,10 @@ form {
 form>div {
     display: flex;
     flex-direction: column;
+    gap: 5px;
     max-width: 700px;
     width: 90%;
     margin: 0 auto;
-    gap: 5px;
 }
 
 label{
@@ -233,6 +235,11 @@ label{
 
 input {
     height: 35px;
+    padding: 20px;
+}
+
+textarea{
+    padding: 20px;
 }
 
 .borda {
@@ -248,23 +255,25 @@ input {
     font-size: 25px;
     color: var(--verde);
     margin: 0 auto;
+    /* box-shadow: 5px 5px 40px 5px rgba(0, 0, 0, 0.4); */
 }
 
 /* Contato */
+.contato{
+    padding: 100px 0;
+}
 
 .contato_titulo {
     font-family: var(--font_bebas);
     font-size: 60px;
     text-align: center;
-    margin: 15px;
+    margin-bottom: 15px;
 }
 
 .conteudo_contato {
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 25px;
-    
+    justify-content: space-around;    
 }
 
 .borda_mapa {
@@ -286,10 +295,11 @@ input {
 
 .info {
     display: flex;
+    align-items: center;
 }
 
 .info>i {
-    margin-left: 50px;
+    margin-right: 20px;
 }
 
 
@@ -304,4 +314,8 @@ footer {
     font-family: var(--font_mont);
     font-size: 19px;
     text-align: center;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
