--- a/02_Lancamento_Estragico/style.css
+++ b/02_Lancamento_Estragico/style.css
@@ -326,7 +326,7 @@ footer {
     color: white;
     font-family: var(--font_mont);
     font-size: 19px;
-    text-align: center;
+    /* text-align: center; */
     height: 50px;
     display: flex;
     align-items: center;
@@ -397,7 +397,7 @@ Grandes telas: acima de 1200px */
     }
 }
 
-@media screen and ( max-width: 1024px )
+/* @media screen and ( max-width: 1024px )
 {
     .quem_somos{
         gap: 40px;
@@ -438,7 +438,7 @@ Grandes telas: acima de 1200px */
     {
         width: 480px;
     }
-}
+} */
 
 @media screen and ( max-width: 900px) {
 
@@ -478,13 +478,24 @@ Grandes telas: acima de 1200px */
 
     #itens{
         position: absolute;
-        top: 8vh;
+        top: 16vh;
         right: 0;
         width: 50vw;
         height: 92vh;
         flex-direction: column;
         align-items: center;
         background-color: var(--verde);
+        gap: 50px;
+    }
+
+    #fechar{
+        display: block;
+        color: white;
+        font-size: 40px; 
+    }
+
+    .menu li{
+        padding: 50px;
     }
 
     .menu{
@@ -534,9 +545,32 @@ Grandes telas: acima de 1200px */
         font-size: 55px;
     }
 
+    #fechar{
+        display: block;
+        color: white;
+        font-size: 40px; 
+    }
+
+    #itens{
+        position: absolute;
+        top: 16vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--verde);
+        gap: 50px;
+    }
+
+    .menu li{
+        padding: 50px;
+    }
+
     .menu{
         display: none;
     }
+
 
     .data {
         font-size: 55px;
@@ -552,9 +586,32 @@ Grandes telas: acima de 1200px */
         font-size: 55px;
     }
 
+    #fechar{
+        display: block;
+        color: white;
+        font-size: 40px; 
+    }
+
+    #itens{
+        position: absolute;
+        top: 16vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--verde);
+        gap: 50px;
+    }
+
+    .menu li{
+        padding: 50px;
+    }
+
     .menu{
         display: none;
     }
+
 
     .data {
         font-size: 45px;
